GearsetPOC/force-app/main/default/objects/Voucher_Database__c/Voucher_Database__c.object-meta.xml
<CustomObject>
    <label>Overseas Staff Voucher Database</label>
    <nameField>
        <label>Staff Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Overseas Staff Voucher Database</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>