GearsetPOC/force-app/main/default/objects/Voucher_Database__c/fields/Current_Year_First_Aid_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_First_Aid_Allocation__c</fullName>
    <label>Current Year First Aid Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>