GearsetPOC/force-app/main/default/objects/Voucher_Database__c/fields/Current_Yearly_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Current_Yearly_Allocation__c</fullName>
    <label>Current Yearly Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>