GearsetPOC/force-app/main/default/objects/Voucher_Database__c/fields/Pass__c.field-meta.xml
<CustomField>
    <fullName>Pass__c</fullName>
    <label>Pass</label>
    <length>50</length>
    <type>Text</type>
</CustomField>