GearsetPOC/force-app/main/default/objects/Voucher_Database__c/fields/Type_of_Staff__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Staff__c</fullName>
    <label>Type of Staff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M.A.D Staff</fullName>
            </value>
            <value>
                <fullName>E.I.L Staff</fullName>
            </value>
            <value>
                <fullName>Eurostar Board Members</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Retired Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>