GearsetPOC/force-app/main/default/objects/Voucher_Database__c/fields/Vouchers_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Vouchers_Remaining__c</fullName>
    <label>Vouchers Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>