GearsetPOC/force-app/main/default/objects/Voucher_Database__c/fields/X2007_Allocation__c.field-meta.xml
<CustomField>
    <fullName>X2007_Allocation__c</fullName>
    <label>2007 Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>