GearsetPOC/force-app/main/default/objects/Voucher_Database__c/fields/X2008_First_Aid_Allocation__c.field-meta.xml
<CustomField>
    <fullName>X2008_First_Aid_Allocation__c</fullName>
    <label>2008 First Aid Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>