GearsetPOC/force-app/main/default/objects/Voucher_Database__c/fields/X2009_Allocation__c.field-meta.xml
<CustomField>
    <fullName>X2009_Allocation__c</fullName>
    <label>2009 Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>