GearsetPOC/force-app/main/default/objects/Voucher_Database__c/validationRules/Vouchers_Remaining_Cannot_be_below_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Vouchers_Remaining_Cannot_be_below_0</fullName>
    <active>true</active>
    <errorConditionFormula>Vouchers_Remaining__c &lt; 0</errorConditionFormula>
    <errorMessage>Vouchers Remaining Cannot be less than 0</errorMessage>
</ValidationRule>