GearsetPOC/force-app/main/default/objects/Voucher_Database__c/listViews/All_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Accounts</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Base__c</columns>
    <columns>Pass__c</columns>
    <columns>Vouchers_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
    <language>en_US</language>
</ListView>