GearsetPOC/force-app/main/default/objects/Voucher_Database__c/listViews/Archive.listView-meta.xml
<ListView>
    <fullName>Archive</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Base__c</columns>
    <columns>Pass__c</columns>
    <columns>Vouchers_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Staff__c</field>
        <operation>equals</operation>
        <value>Archive</value>
    </filters>
    <label>Archive</label>
    <language>en_US</language>
</ListView>