GearsetPOC/force-app/main/default/objects/Voucher_Database__c/listViews/E_I_L_Staff.listView-meta.xml
<ListView>
    <fullName>E_I_L_Staff</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Base__c</columns>
    <columns>Pass__c</columns>
    <columns>Vouchers_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Staff__c</field>
        <operation>equals</operation>
        <value>E.I.L Staff</value>
    </filters>
    <label>E.I.L Staff</label>
    <language>en_US</language>
</ListView>