GearsetPOC/force-app/main/default/objects/Voucher_Database__c/listViews/M_A_D_Staff.listView-meta.xml
<ListView>
    <fullName>M_A_D_Staff</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Base__c</columns>
    <columns>Pass__c</columns>
    <columns>Vouchers_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_of_Staff__c</field>
        <operation>equals</operation>
        <value>M.A.D Staff</value>
    </filters>
    <label>M.A.D Staff</label>
    <language>en_US</language>
</ListView>