GearsetPOC/force-app/main/default/objects/Voucher_Database__c/listViews/Retired.listView-meta.xml
<ListView>
    <fullName>Retired</fullName>
    <booleanFilter>1 OR  2</booleanFilter>
    <columns>NAME</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Base__c</columns>
    <columns>Pass__c</columns>
    <columns>Vouchers_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Base__c</field>
        <operation>contains</operation>
        <value>Retired</value>
    </filters>
    <filters>
        <field>Type_of_Staff__c</field>
        <operation>equals</operation>
        <value>Retired Staff</value>
    </filters>
    <label>Retired</label>
    <language>en_US</language>
</ListView>