GearsetPOC/force-app/main/default/objects/Voucher_Database__c/listViews/Test_Accounts.listView-meta.xml
<ListView>
    <fullName>Test_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Base__c</columns>
    <columns>Pass__c</columns>
    <columns>Vouchers_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Test</value>
    </filters>
    <label>Test Accounts</label>
    <language>en_US</language>
</ListView>